--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> ABOUT US</h1>
 
-<p1 style = " font-size:25px;text-align:center;margin-top: 20px; line-height: 2; "> MY CHANNEL IS GAMING CHANNELMAINLY MINECRAFT.I LOVE TO MAKE THESE TYPE OF VIDEOS AND I LOVE TO MAKE THESE TYPE OF VIDEOS. LAMMU❤️
+<p1 style = " font-size:25px;text-align:center;margin-top: 20px; line-height: 2; "> MY CHANNEL IS GAMING CHANNELMAINLY MINECRAFT.I LOVE TO MAKE THESE TYPE OF VIDEOS AND I LOVE TO MAKE THESE TYPE OF VIDEOS. LAMMU 😂
 </p1>
 
 
