--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+
+<body background-colour: black
+>
+
+
+
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> xSHISU </h1>
 
  <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 20px;color: white;background-color: red; padding: 20px 30px 20px 30px" href="https://www.youtube.com/@xSHISU9">SUBSCRIBE</a>
