--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <hr>
 
-<p1 style = " font-size:25px;text-align:center;margin-top: 20px; line-height: 2; "> Welcome to xSHISU 🎮 – your ultimate destination for all things Minecraft ⛏️! Here, we dive into the expansive world of blocks, mobs 🐉, and epic builds 🏰, exploring everything from survival challenges to massive creative projects 🌍. Whether you're a seasoned miner or new to the game, xSHISU is where you’ll find exciting gameplay 🎮, helpful tips 💡, and a fun community of fellow Minecraft enthusiasts 🧑‍🤝‍🧑. Join me on epic adventures 🌟 as we craft, explore, and conquer together 🏆. Let’s mine, build, and survive – because at xSHISU, every block matters! ⚒️💎</p1>
+<p1 style = " font-size:25px;text-align:left;margin-top: 20px; line-height: 1.5; "> Welcome to xSHISU 🎮 – your ultimate destination for all things Minecraft ⛏️! Here, we dive into the expansive world of blocks, mobs 🐉, and epic builds 🏰, exploring everything from survival challenges to massive creative projects 🌍. Whether you're a seasoned miner or new to the game, xSHISU is where you’ll find exciting gameplay 🎮, helpful tips 💡, and a fun community of fellow Minecraft enthusiasts 🧑‍🤝‍🧑. Join me on epic adventures 🌟 as we craft, explore, and conquer together 🏆. Let’s mine, build, and survive – because at xSHISU, every block matters! ⚒️💎</p1>
 
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
