--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color: light cyan;">
+<body style="background-color: light grey;">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 
