--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
 
-<div style = "text-align:center;">  <img style = "width: 50%;" src="THUMBNAIL.png"> </div>
+<div style = "text-align:center;">  <img style = "width: 50%;" src="THUMBNAIL 1.png"> </div>
 
 <hr>
 
