--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <h2 style = ";background-color: green;"> MINECRAFT </h2>
 
 <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: bLACK; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://mcpedl.org/downloading/">DOWNLOAD</a>
+<h2 style = ";background-color: green;"> MY RESOURCE PACK </h2>
+
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: bLACK; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://mcpedl.com/nrrds-shader-for-minecraft-pe/#downloads">DOWNLOAD</a>
 
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> ABOUT US</h1>
 
