--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <hr>
 
-<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/rJXAMFtsiNA?si=Y4z_7fZ79G7OX5-d">SEE VIDEO</a>
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/huenGztRi04">SEE VIDEO</a>
 
 <hr>
 
