--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
 
-<div style = "text-align:center;">  <img style = "width: 50%;" src="THUMBNAIL 1.png"> </div>
+<div style = "text-align:center;">  <img style = "width: 50%;" src="Untitled design (7).png"> </div>
 
 <hr>
 
-<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/huenGztRi04">SEE VIDEO</a>
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/yC5mxq3xRB4?si=il2flvnZe1G3XFm5">SEE VIDEO</a>
 
 <hr>
 
