--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 
 
-<h1 style = "font-size:80px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> xSHISU </h1>
+<h1 style = "font-size:80px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> Gaming Space With Fun </h1>
 <div style = "text-align:center;">  <img style = "width: 25%;height: 25%;" src="logo.png"> </div>
 
- <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 60px;color: white;background-color: red; padding: 20px 30px 20px 30px" href="https://www.youtube.com/@xSHISU9">SUBSCRIBE</a>
+ <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 60px;color: white;background-color: red; padding: 20px 30px 20px 30px" href="https://youtube.com/@gamingspacewithfun?si=e8B57PAJ2DMtLtv1">SUBSCRIBE</a>
 
 <h2 style = "font-size : 30px;text-align:center;color: red;background-color: yellow;"> SUBSCRIBE FOR NO ADS🚫<h2>
 
 <hr>
 
-<p1 style = " font-size:25px;text-align:left;margin-top: 20px; line-height: 1.5; "> Welcome to xSHISU 🎮 – your ultimate destination for all things Minecraft ⛏️! Here, we dive into the expansive world of blocks, mobs 🐉, and epic builds 🏰, exploring everything from survival challenges to massive creative projects 🌍. Whether you're a seasoned miner or new to the game, xSHISU is where you’ll find exciting gameplay 🎮, helpful tips 💡, and a fun community of fellow Minecraft enthusiasts 🧑‍🤝‍🧑. Join me on epic adventures 🌟 as we craft, explore, and conquer together 🏆. Let’s mine, build, and survive – because at xSHISU, every block matters! ⚒️💎</p1>
+<p1 style = " font-size:25px;text-align:left;margin-top: 20px; line-height: 1.5; "> Welcome to GAMING SPACE WITH FUN 🎮 – your ultimate destination for all things Minecraft ⛏️! Here, we dive into the expansive world of blocks, mobs 🐉, and epic builds 🏰, exploring everything from survival challenges to massive creative projects 🌍. Whether you're a seasoned miner or new to the game, This
+ is where you’ll find exciting gameplay 🎮, helpful tips 💡, and a fun community of fellow Minecraft enthusiasts 🧑‍🤝‍🧑. Join me on epic adventures 🌟 as we craft, explore, and conquer together 🏆. Let’s mine, build, and survive – because at xSHISU, every block matters! ⚒️💎</p1>
 
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
@@ -21,7 +22,7 @@
 
 <hr>
 
-<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/yC5mxq3xRB4?si=il2flvnZe1G3XFm5">SEE VIDEO</a>
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/pC2Q8-JirZg">SEE VIDEO</a>
 
 <hr>
 
