--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 
 
-<h1 style = "font-size:80px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> Gaming Space With Fun </h1>
+<h1 style = "font-size:80px;text-align:center;margin-top: 20px;color: yellow;background-color: black; stroke = 2%"> XSHISU </h1>
 <div style = "text-align:center;">  <img style = "width: 25%;height: 25%;" src="logo.png"> </div>
 
- <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 60px;color: white;background-color: red; padding: 20px 30px 20px 30px" href="https://youtube.com/@gamingspacewithfun?si=e8B57PAJ2DMtLtv1">SUBSCRIBE</a>
+ <div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 60px;color: white;background-color: red; padding: 20px 30px 20px 30px" href="www.youtube.com/@xSHISU9">SUBSCRIBE</a>
 
 <h2 style = "font-size : 30px;text-align:center;color: red;background-color: yellow;"> SUBSCRIBE FOR NO ADS🚫<h2>
 
@@ -22,7 +22,7 @@
 
 <hr>
 
-<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/pC2Q8-JirZg">SEE VIDEO</a>
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/yC5mxq3xRB4?si=RKeCODDOX00qbSZ9">SEE VIDEO</a>
 
 <hr>
 
