--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
 
-<div style = "text-align:center;">  <img style = "width: 50%;" src="thumbnail 3.jpg"> </div>
+<div style = "text-align:center;">  <img style = "width: 50%;" src="Thumbnail 4.jpg"> </div>
 
 <hr>
 
-<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/HQJmlCpMVX4">SEE VIDEO</a>
+<div style = "text-align:center;">  <a style = "font-size:30px;margin-top: 30px;color: white;background-color: blue; padding: 13px 30px 13px 30px;margin-top: 35px;" href="https://youtu.be/YBQnqW8v91g">SEE VIDEO</a>
 
 <hr>
 
