--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1 style = "font-size:60px;text-align:center;margin-top: 20px;color: yellow;background-color: black;"> OUR LATEST UPDATE! </h1>
 
 
-<div style = "text-align:center;">  <img style = "width: 50%;" src="Thumbnail 4.jpg"> </div>
+<div style = "text-align:center;">  <img style = "width: 50%;" src="mami.jpg"> </div>
 
 <hr>
 
